src/scss/App.scss
header {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	background-color: var(--white-1);
	box-shadow: var(--shadow-light);
	padding-right: 2rem;
	height: var(--header-height);
	display: flex;
	justify-content: flex-end;
	align-items: center;

	.profile {
		width: calc(var(--header-height) * 0.6);
		height: calc(var(--header-height) * 0.6);
		background-color: #cb7263;
		color: var(--white-1);
		border-radius: 50%;
		display: flex;
		justify-content: center;
		align-items: center;
	}
}

.main-container {
	padding: 2rem;
	padding-top: calc(var(--header-height) + 3rem);
	transition: margin-left 0.3s ease-in-out;

	main {
		display: flex;
		flex-direction: column;
		align-items: center;
		gap: 2rem;
		color: var(--accent-dark);
		max-width: 1300px;
		margin: 0 auto;

		.title-area {
			max-width: 450px;
			align-self: flex-start;
			line-height: 1.4;

			h1 {
				margin-bottom: 0.5rem;
			}

			a {
				color: var(--accent);
				font-weight: bold;

				&::after {
					content: 'open_in_new';
					font-family: 'Material Symbols Outlined';
					margin-left: 0.2rem;
					vertical-align: middle;
					font-weight: normal;
				}
			}
		}

		button.create-operation {
			align-self: flex-end;
		}
	}
}

.chat-bubble {
	position: fixed;
	bottom: 1rem;
	right: 1rem;
	background-color: var(--accent);
	color: var(--white-1);
	--size: 2.5rem;
	width: var(--size);
	height: var(--size);
	font-size: calc(var(--size) * 0.6);
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 50%;
	cursor: pointer;
}

